OpenSLP Change Log (stable-1-0)
-------------------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================
02/13/03 matt@sco.com
Allow strict aliasing.  Fix involves using existing endian routines
rather than macros that use htonx() and ntohx() 

11/11/02 matt@sco.com
Fixed SA->DA registration logic that excluded some mortal registrations.

11/11/02 matt@sco.com
Fixed aging problem that aged out static registrations

10/23/02 matt@sco.com
SLPDeReg() fix from Matthew Layton

09/12/02 matt@sco.com
Fixed win32 project files so that ENABLE_PREDICATES is defined

09/09/02 matt@sco.com
Commited patch from Roger Tawa that fixes a segfault generated by a
freed but unlinked SLPDSocket.

06/12/02 matt@caldera.com
Commited patch from Vinupama Godavarthi the makes net.slp.multicastIF
work

*** Tag OpenSLP-1.0.9 ***

04/26/02 matt@caldera.com
Added commented instructions for building on Irix to Makefile.am files

04/26/02 matt@caldera.com
Added version and length sanity checks for incoming messages 

04/26/02 matt@caldera.com
Fixed possible SEGV when logging DA traffic

04/04/02 matt@caldera.com
Added patch from Arun Barboza that makes attribute compares case insensitive
as per RFC 2608

03/05/02
Added patch from Garth Bushell that fixes an SLP url parsing problem.

*** Tag OpenSLP-1.0.8 ***

02/25/02 matt@caldera.com
Added patch from Arun Barboza to handle '==' SLPv1 predicates.  This patch
allows better interoperability with Novell SLP networks.

02/13/02 matt@caldera.com
Added fix from Arun Barboza to make V1 DAAdverts use the same encoding as
the request

02/13/02 matt@caldera.com
Fixed a problem in SLPProcessMessage where errorcodes were not being returned